feat: add server treasuries (#128)
