# services/gameplay/internal/api/handler/server/handler.go
@@ -23,7 +23,7 @@ func New(deps *deps.APIServerDeps) *Handler {
 
 func (h *Handler) RateLimits() map[string]commonMiddleware.Rate {
 	return map[string]commonMiddleware.Rate{
-		"/gameplay.v1.ServerService/CreateServer":             {Aliases: []string{"POST:/servers"}, Limit: 30, Period: time.Minute, Identifier: "CreateServer"},
+		"/gameplay.v1.ServerService/CreateServer":             {Aliases: []string{"POST:/servers"}, Limit: 10, Period: time.Hour, Identifier: "CreateServer"},
 		"/gameplay.v1.ServerService/GetServer":                {Aliases: []string{"GET:/servers/{uuid}"}, Limit: 120, Period: time.Minute, Identifier: "GetServer"},
 		"/gameplay.v1.ServerService/GetServerByName":          {Aliases: []string{"GET:/servers/by-name/{string}"}, Limit: 120, Period: time.Minute, Identifier: "GetServerByName"},
 		"/gameplay.v1.ServerService/ListServers":              {Aliases: []string{"GET:/servers"}, Limit: 120, Period: time.Minute, Identifier: "ListServers"},
@@ -31,5 +31,6 @@ func (h *Handler) RateLimits() map[string]commonMiddleware.Rate {
 		"/gameplay.v1.ServerService/GetUserServerPermissions": {Aliases: []string{"GET:/servers/{uuid}/permissions/{uuid}"}, Limit: 120, Period: time.Minute, Identifier: "GetUserServerPermissions"},
 		"/gameplay.v1.ServerService/UpdateServer":             {Aliases: []string{"PATCH:/servers/{uuid}"}, Limit: 30, Period: time.Minute, Identifier: "UpdateServer"},
 		"/gameplay.v1.ServerService/ArchiveServer":            {Aliases: []string{"POST:/servers/{uuid}/archive"}, Limit: 10, Period: time.Minute, Identifier: "ArchiveServer"},
+		"/gameplay.v1.ServerService/GetServerTreasury":        {Aliases: []string{"GET:/servers/{uuid}/treasury"}, Limit: 120, Period: time.Minute, Identifier: "GetServerTreasury"},
 	}
 }
